# gl_

./: .gitignore  ADMIN_GUIDE.md  ANALYTICS_AUTOMATION.md  CI_CD_README.md  CNAME  COMMENT_FIX_SUMMARY.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  ENV_EXAMPLE.md  FEATURE_IMPLEMENTATION_SUMMARY.md  FINAL_TESTING_SUMMARY.md  FRONTEND_TESTING_GUIDE.md  IMPLEMENTATION_COMPLETE.md  PRODUCTION_CHECKLIST.md  Procfile  README.md  README_DEPLOYMENT.md  TESTING.md  TESTING_RESULTS.md  TEST_IMPLEMENTATION_SUMMARY.md  backup.sh  deploy.sh  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  requirements.txt  restore.sh  run-tests.sh  start-backend.sh  start-frontend.sh  start.ps1  start.sh
gogir-labs-be/: .dockerignore  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
gogir-labs-be/apps/analytics/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
gogir-labs-be/apps/blog/: admin.py  feeds.py  models.py  serializers.py  test_api.py  tests.py  urls.py  views.py
gogir-labs-be/apps/contact/: admin.py  models.py  serializers.py  test_api.py  tests.py  urls.py  views.py
gogir-labs-be/apps/newsletter/: admin.py  apps.py  models.py  serializers.py  services.py  test_api.py  tests.py  urls.py  views.py
gogir-labs-be/apps/notifications/: admin.py  apps.py  middleware.py  models.py  serializers.py  services.py  signals.py  tests.py  urls.py  views.py
gogir-labs-be/apps/portfolio/: admin.py  apps.py  tests.py  (+4 more)
gogir-labs-be/config/: api_urls.py  settings.py  settings_production.py  sitemaps.py  test_auth.py  urls.py
(+137 files in other folders)
